panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_compound_assignment_only_evaluates_lhs_once.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_compound_assignment_only_evaluates_lhs_once.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_compound_assignment_only_evaluates_lhs_once.c"
   (declaration external putchar~0 `fn(∅: int) -> int` ∅)
   (function-definition external
      f~1 `fn(p: ptr<int>) -> ptr<int>`
      (params
         p~3 `ptr<int>`)
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: int) -> int>`
                  (putchar~0 `fn(∅: int) -> int`))
               (65 `int`)))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: int) -> int>`
                  (putchar~0 `fn(∅: int) -> int`))
               (10 `int`)))
         (return (p~3 `ptr<int>`))))
   (function-definition external
      main~4 `fn() -> int`
      (compound-statement
         (definition x~6 `int` (42 `int`))
         (expression
            (combine `int`
               (assign `ptr<int>` (unnamed-temporary~7 `ptr<int>`)
                  (addressof `ptr<int>`
                     (deref `int`
                        (call `ptr<int>`
                           (addressof `ptr<fn(p: ptr<int>) -> ptr<int>>`
                              (f~1 `fn(p: ptr<int>) -> ptr<int>`))
                           (addressof `ptr<int>`
                              (x~6 `int`))))))
               (assign `int` (deref `int` (unnamed-temporary~7 `ptr<int>`)) (truncate `int` (add `long` (sign-extend `long` (deref `int` (unnamed-temporary~7 `ptr<int>`))) (27l `long`))))))
         (return (x~6 `int`)))))

----- stderr -----
