panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_compound_assignment_to_deref.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_compound_assignment_to_deref.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_compound_assignment_to_deref.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition x~2 `int` (42 `int`))
         (definition p~3 `ptr<int>`
            (addressof `ptr<int>`
               (x~2 `int`)))
         (expression
            (combine `int`
               (assign `ptr<int>` (unnamed-temporary~4 `ptr<int>`)
                  (addressof `ptr<int>`
                     (deref `int` (p~3 `ptr<int>`))))
               (assign `int` (deref `int` (unnamed-temporary~4 `ptr<int>`)) (truncate `int` (add `long` (sign-extend `long` (deref `int` (unnamed-temporary~4 `ptr<int>`))) (27l `long`))))))
         (return (x~2 `int`)))))

----- stderr -----
