panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_empty_main.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_empty_main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> Int`
      (compound-statement)))

----- stderr -----
