panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_initialisation_with_noop_type_conversion_gets_new_slot.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_initialisation_with_noop_type_conversion_gets_new_slot.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_initialisation_with_noop_type_conversion_gets_new_slot.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition a~2 `unsigned int` (noop-type-conversion `unsigned int` (42 `int`)))
         (definition b~3 `int` (27 `int`))
         (return (noop-type-conversion `int` (a~2 `unsigned int`))))))

----- stderr -----
